# Agentic-AI

./: .gitignore  README.md  pyproject.toml  requirements.txt
1_basic_folder/: 1_basic_chatbot.ipynb
agents/: Agent_bot.ipynb  Memory_Agent.ipynb  email_writer.ipynb  main.ipynb  reacting_agent.ipynb  vacation_request_dubai.txt
mcp_server/: client.py  mathserver.py  weather.py
